# IQSS_feasibility

./: .gitignore  README.md  main.py  pyproject.toml
api/: auth.py  run_all.py
api/easily/: main.py
api/lifen/: main.py
app/: app_conf.py  auth.py  data_processor.py  main.py  sidebar.py  style.py  tabs_handler.py  utils.py
app/.streamlit/: config.toml
app/tabs/: analyse.py  easily.py  lifen.py
